--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "TopMonks",
   "license": "MIT",
   "dependencies": {
-    "blendid": "^4.4.3"
+    "blendid": "^4.4.3",
+    "marked": "^0.3.19",
+    "nunjucks-markdown": "^2.0.1"
   }
 }
