--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "blendid": "^4.4.3",
     "marked": "^0.3.19",
     "nunjucks-markdown": "^2.0.1"
+  },
+  "devDependencies": {
+    "prettier": "^1.13.5"
   }
 }
