Added ESLint config for prettier

--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "nunjucks-markdown": "^2.0.1"
   },
   "devDependencies": {
+    "eslint": "^5.0.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.1",
     "prettier": "^1.13.7"
+  },
+  "scripts": {
+    "start": "blendid",
+    "build": "blendid -- build"
   }
 }
