--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.2",
+    "http-server": "^0.11.1",
+    "lighthouse": "^3.0.1",
     "marked": "^0.3.19",
     "nunjucks-markdown": "^2.0.1",
     "prettier": "^1.13.7"
@@ -21,6 +23,9 @@
     "start:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid",
     "start:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ blendid",
     "build:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid -- build",
-    "build:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ blendid -- build"
+    "build:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ blendid -- build",
+    "build": "yarn run build:www.topmonks.com && yarn run build:prodeti.topmonks.cz",
+    "test:lighthouse": "lighthouse http://localhost:8080/ --output json --output html --chrome-flags=\"--headless\" --no-enable-error-reporting --skip-audits is-on-https --skip-audits themed-omnibox --skip-audits redirects-http --skip-audits load-fast-enough-for-pwa --skip-audits service-worker --skip-audits splash-screen --skip-audits webapp-install-banner --skip-audits works-offline",
+    "test": "yarn run test:lighthouse"
   }
 }
