--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,27 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
+
+test-site: &test-site
+    docker:
+      - image: circleci/node:10-browsers
+    working_directory: ~/topmonks-webs
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/topmonks-webs
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+      - run:
+          command: yarn run http-server ./public/$HOST
+          background: true
+      - run: |
+          mkdir results
+          yarn test:lighthouse
+      - store_artifacts:
+          path: ./results
+
 jobs:
   build:
     docker:
@@ -33,44 +54,14 @@ jobs:
           paths: public
 
   test-www-topmonks-com:
-    docker:
-      - image: circleci/node:10-browsers
-    working_directory: ~/topmonks-webs
-    steps:
-      - checkout
-      - attach_workspace:
-          at: ~/topmonks-webs
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-      - run:
-          command: yarn run http-server ./public/www.topmonks.com
-          background: true
-      - run: |
-          mkdir results
-          yarn test:lighthouse
-      - store_artifacts:
-          path: ./results
+    <<: *test-site
+    environment:
+      HOST: www.topmonks.com
 
   test-prodeti-topmonks-cz:
-    docker:
-      - image: circleci/node:10-browsers
-    working_directory: ~/topmonks-webs
-    steps:
-      - checkout
-      - attach_workspace:
-          at: ~/topmonks-webs
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-      - run:
-          command: yarn run http-server ./public/prodeti.topmonks.cz
-          background: true
-      - run: |
-          mkdir results
-          yarn test:lighthouse
-      - store_artifacts:
-          path: ./results
+    <<: *test-site
+    environment:
+      HOST: prodeti.topmonks.cz
 
 workflows:
   version: 2
