--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,11 @@ jobs:
     environment:
       HOST: www.topmonks.com
 
+  test-www-topmonks-cz:
+    <<: *test-site
+    environment:
+      HOST: www.topmonks.cz
+
   test-prodeti-topmonks-cz:
     <<: *test-site
     environment:
