--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "marked": "^0.3.19",
     "nunjucks-markdown": "^2.0.1",
     "prettier": "^1.13.7",
+    "stylelint": "^9.3.0",
+    "stylelint-config-prettier": "^3.3.0",
     "tap-xunit": "^2.3.0"
   },
   "scripts": {
