--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "ava": "^0.25.0",
     "blendid": "^4.4.3",
+    "concurrently": "^3.6.0",
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.2",
@@ -33,7 +34,8 @@
     "build": "yarn run build:www.topmonks.com && yarn run build:www.topmonks.cz && yarn run build:prodeti.topmonks.cz",
     "test:ava": "ava --tap | tap-xunit > ./results/ava.xml",
     "test:eslint": "eslint ./ --format junit --output-file ./results/eslint.xml",
+    "test:stylelint": "stylelint-config-prettier-check",
     "test:lighthouse": "lighthouse http://localhost:8080/ --output json --output html --output-path ./results/lh.html --chrome-flags=\"--headless\" --no-enable-error-reporting --skip-audits is-on-https --skip-audits themed-omnibox --skip-audits redirects-http --skip-audits load-fast-enough-for-pwa --skip-audits service-worker --skip-audits splash-screen --skip-audits webapp-install-banner --skip-audits works-offline",
-    "test": "yarn run test:eslint"
+    "test": "concurrently 'yarn run test:eslint' 'yarn run test:stylelint'"
   }
 }
