--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,26 +5,32 @@
 version: 2
 
 test-site: &test-site
-    docker:
-      - image: circleci/node:10-browsers
-    working_directory: ~/topmonks-webs
-      - checkout
-      - attach_workspace:
-          at: ~/topmonks-webs
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "yarn.lock" }}
-      - run:
-          command: yarn run http-server ./public/$HOST
-          background: true
-      - run: |
-          mkdir results
-          yarn test:lighthouse
-          yarn test:ava
-      - store_artifacts:
-          path: ./results
-      - store_test_results:
-          path: ./results
+  docker:
+    - image: circleci/node:10-browsers
+  working_directory: ~/topmonks-webs
+  steps:
+    - checkout
+    - attach_workspace:
+        at: ~/topmonks-webs
+    - restore_cache:
+        keys:
+        - v1-dependencies-{{ checksum "yarn.lock" }}
+    - run:
+        command: yarn run http-server ./public/$HOST
+        background: true
+    - run: |
+        mkdir results
+        yarn test:lighthouse
+        yarn test:ava
+    - store_artifacts:
+        path: ./results
+    - store_test_results:
+        path: ./results
+
+s3-deploy: &s3-deploy
+  docker:
+    - image: circleci/python:2.7-jessie
+  working_directory: ~/topmonks-webs
 
 jobs:
   build:
@@ -71,6 +77,26 @@ jobs:
     environment:
       HOST: prodeti.topmonks.cz
 
+  deploy-prodeti-topmonks-cz:
+    <<: *s3-deploy
+    environment:
+      AWS_CLOUDFRONT_DISTRIBUTION_ID: E3FDER5NIOLAD2
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/topmonks-webs
+      - run:
+          name: Install awscli
+          command: sudo pip install awscli
+      - run:
+          name: Deploy to S3
+          command: aws s3 sync public/prodeti.topmonks.cz s3://prodeti.topmonks.cz/
+      - run:
+          name: Invalidate CDN distribution
+          command: |
+            aws configure set preview.cloudfront true
+            aws cloudfront create-invalidation --distribution-id=$AWS_CLOUDFRONT_DISTRIBUTION_ID --paths=/*
+
 workflows:
   version: 2
   build_and_deploy:
@@ -82,3 +108,9 @@ workflows:
       - test-prodeti-topmonks-cz:
           requires:
             - build
+      - deploy-prodeti-topmonks-cz:
+          requires:
+            - test-prodeti-topmonks-cz
+          filters:
+            branches:
+              only: master
