--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,9 +85,16 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/topmonks-webs
+      - restore_cache:
+          keys:
+            - aws-cli
       - run:
           name: Install awscli
           command: sudo pip install awscli
+      - save_cache:
+          key: aws-cli
+          paths:
+            - "~/.cache/pip"
       - run:
           name: Deploy to S3
           command: aws s3 sync public/prodeti.topmonks.cz s3://prodeti.topmonks.cz/
@@ -105,9 +112,16 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/topmonks-webs
+      - restore_cache:
+          keys:
+            - aws-cli
       - run:
           name: Install awscli
           command: sudo pip install awscli
+      - save_cache:
+          key: aws-cli
+          paths:
+            - "~/.cache/pip"
       - run:
           name: Deploy to S3
           command: aws s3 sync public/www.topmonks.com s3://www.topmonks.com/
