--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "test:stylelint": "stylelint-config-prettier-check",
     "test:lighthouse": "lighthouse http://localhost:8080/ --output json --output html --output-path ./results/lh.html --chrome-flags=\"--headless\" --no-enable-error-reporting --skip-audits is-on-https --skip-audits themed-omnibox --skip-audits redirects-http --skip-audits load-fast-enough-for-pwa --skip-audits service-worker --skip-audits splash-screen --skip-audits webapp-install-banner --skip-audits works-offline",
     "test:broken-links": "yarn blc http://localhost:3000/ -ro",
-    "test": "concurrently 'yarn test:eslint' 'yarn test:stylelint'; yarn test:broken-links"
+    "test": "concurrently 'yarn test:eslint' 'yarn test:stylelint'"
   }
 }
