--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@material/layout-grid": "^0.34.0",
-    "broken-link-checker": "^0.7.8"
+    "broken-link-checker-local": "^0.2.0"
   },
   "devDependencies": {
     "ava": "^0.25.0",
@@ -37,7 +37,10 @@
     "test:eslint": "eslint ./ --format junit --output-file ./results/eslint.xml",
     "test:stylelint": "stylelint-config-prettier-check",
     "test:lighthouse": "lighthouse http://localhost:8080/ --output json --output html --output-path ./results/lh.html --chrome-flags=\"--headless\" --no-enable-error-reporting --skip-audits is-on-https --skip-audits themed-omnibox --skip-audits redirects-http --skip-audits load-fast-enough-for-pwa --skip-audits service-worker --skip-audits splash-screen --skip-audits webapp-install-banner --skip-audits works-offline",
-    "test:broken-links": "yarn blc http://localhost:3000/ -ro",
-    "test": "concurrently 'yarn test:eslint' 'yarn test:stylelint'"
+    "test:broken-links:www.topmonks.com": "blcl ./public/www.topmonks.com -ro --exclude linkedin.com --exclude caffe.topmonks.cz",
+    "test:broken-links:www.topmonks.cz": "blcl ./public/www.topmonks.cz -ro --exclude linkedin.com --exclude caffe.topmonks.cz",
+    "test:broken-links:prodeti.topmonks.cz": "blcl ./public/prodeti.topmonks.cz -ro --exclude linkedin.com --exclude caffe.topmonks.cz",
+    "test:broken-links":"yarn test:broken-links:www.topmonks.com && yarn test:broken-links:prodeti.topmonks.cz",
+    "test": "concurrently 'yarn test:eslint' 'yarn test:stylelint' && yarn test:broken-links"
   }
 }
