--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
   "author": "TopMonks",
   "license": "MIT",
   "dependencies": {
-    "@material/layout-grid": "^0.34.0",
-    "broken-link-checker-local": "^0.2.0"
+    "@material/layout-grid": "^0.34.0"
   },
   "devDependencies": {
     "ava": "^0.25.0",
     "blendid": "^4.4.3",
+    "broken-link-checker-local": "^0.2.0",
     "concurrently": "^3.6.1",
     "eslint": "^5.3.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.2",
+    "gulp-markdown-to-json": "^1.1.0",
+    "gulp-merge-json": "^1.3.1",
     "http-server": "^0.11.1",
     "lighthouse": "^3.0.3",
     "marked": "^0.4.0",
-    "nunjucks-markdown": "^2.0.1",
     "prettier": "^1.14.0",
     "stylelint": "^9.4.0",
     "stylelint-config-prettier": "^3.3.0",
@@ -46,7 +47,7 @@
     "test:broken-links:prodeti.topmonks.cz": "blcl ./public/prodeti.topmonks.cz -ro --exclude linkedin.com --exclude caffe.topmonks.cz",
     "test:broken-links:caffe.topmonks.cz": "blcl ./public/caffe.topmonks.cz -ro --exclude linkedin.com --exclude caffe.topmonks.cz",
     "test:broken-links:studio.topmonks.com": "blcl ./public/studio.topmonks.com -ro --exclude linkedin.com --exclude caffe.topmonks.cz",
-    "test:broken-links":"yarn test:broken-links:www.topmonks.com && yarn test:broken-links:prodeti.topmonks.cz",
+    "test:broken-links": "yarn test:broken-links:www.topmonks.com && yarn test:broken-links:prodeti.topmonks.cz",
     "test": "concurrently 'yarn test:eslint' 'yarn test:stylelint' && yarn test:broken-links"
   }
 }
