prodeti.topmonks.cz deployment enabled

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,13 +122,13 @@ workflows:
       - test-prodeti-topmonks-cz:
           requires:
             - build
-#      - deploy-prodeti-topmonks-cz:
-#          context: org-global
-#          requires:
-#            - test-prodeti-topmonks-cz
-#          filters:
-#            branches:
-#              only: master
+      - deploy-prodeti-topmonks-cz:
+          context: org-global
+          requires:
+            - test-prodeti-topmonks-cz
+          filters:
+            branches:
+              only: master
       - deploy-www-topmonks-com:
           context: org-global
           requires:
