blockchain.topmonks.cz boot

--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "start:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ blendid",
     "start:caffe.topmonks.cz": "BLENDID_CONFIG_PATH=./caffe.topmonks.cz/config/ blendid",
     "start:studio.topmonks.com": "BLENDID_CONFIG_PATH=./studio.topmonks.com/config/ blendid",
+    "start:blockchain.topmonks.cz": "BLENDID_CONFIG_PATH=./blockchain.topmonks.cz/config/ blendid",
     "build:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid -- build",
     "build:www.topmonks.cz": "BLENDID_CONFIG_PATH=./www.topmonks.cz/config/ blendid -- build",
     "build:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ blendid -- build",
     "build:caffe.topmonks.cz": "BLENDID_CONFIG_PATH=./caffe.topmonks.cz/config/ blendid -- build",
     "build:studio.topmonks.com": "BLENDID_CONFIG_PATH=./studio.topmonks.com/config/ blendid -- build",
+    "build:blockchain.topmonks.cz": "BLENDID_CONFIG_PATH=./blockchain.topmonks.cz/config/ blendid -- build",
     "build": "yarn build:www.topmonks.com && yarn build:www.topmonks.cz && yarn build:prodeti.topmonks.cz",
     "test:ava": "ava --tap | tap-xunit > ./results/ava.xml",
     "test:eslint": "eslint ./ --format junit --output-file ./results/eslint.xml",
