cloudfront CDN and invalidation for blockchain.topmonks.com

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,8 +112,8 @@ jobs:
 
   deploy-blockchain-topmonks-com:
     <<: *s3-deploy
-#    environment:
-#      AWS_CLOUDFRONT_DISTRIBUTION_ID: EMNWZWEX2M2BH
+    environment:
+      AWS_CLOUDFRONT_DISTRIBUTION_ID: E8FIHBRFAUTJQ
     steps:
     - checkout
     - attach_workspace:
@@ -121,11 +121,11 @@ jobs:
     - run:
         name: Deploy to S3
         command: aws s3 sync public/blockchain.topmonks.com s3://blockchain.topmonks.com/
-#    - run:
-#        name: Invalidate CDN distribution
-#        command: |
-#          aws configure set preview.cloudfront true
-#          aws cloudfront create-invalidation --distribution-id=$AWS_CLOUDFRONT_DISTRIBUTION_ID --paths=/*
+    - run:
+        name: Invalidate CDN distribution
+        command: |
+          aws configure set preview.cloudfront true
+          aws cloudfront create-invalidation --distribution-id=$AWS_CLOUDFRONT_DISTRIBUTION_ID --paths=/*
 
   deploy-www-topmonks-com:
     <<: *s3-deploy
