--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "tap-xunit": "^2.3.0"
   },
   "scripts": {
-    "create-app": "node ./create-app",
+    "create-site": "node ./create-site",
     "start:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid",
     "start:www.topmonks.cz": "BLENDID_CONFIG_PATH=./www.topmonks.cz/config/ blendid",
     "start:prodeti.topmonks.cz": "BLENDID_CONFIG_PATH=./prodeti.topmonks.cz/config/ blendid",
