--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-prettier": "^3.0.0",
     "gulp-markdown-to-json": "^1.1.0",
     "gulp-merge-json": "^1.3.1",
+    "gulp-watch": "^5.0.1",
     "http-server": "^0.11.1",
     "lighthouse": "^3.2.1",
     "marked": "^0.5.1",
